k8s-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcas-demo-svc
  namespace: tjason
spec:
  selector:
    app: vcas-demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcas-demo-dep
  namespace: tjason
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vcas-demo-app
  template:
    metadata:
      labels:
        app: vcas-demo-app
    spec:
      containers:
      - name: vcas-demo
        image: shiseidotang/vcas-demo:$${GIT_COMMIT_ID}
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
