ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: vcas-ir
  namespace: tjason
spec:
  virtualhost:
    fqdn: contour.cdan-test-c23cfd64-12dd-11e9-958c-0a8a1b3b0536.93a9beeb-d761-4551-bdba-e1f8b99fb995.vke-user.com
  routes:
    - match: /tjason
      #prefixRewrite: "/"
      services:
        - name: vcas-demo-svc
          port: 80
